[package]
name = "organ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
regex = "1"
rug-fft = "0.1.2"
gmp-mpfr-sys = "1.3.1"
flint-sys = "0.4.0"
futures = "0.3"
rayon = "1.5"

[dependencies.rug]
version = "1.11.0"
features = ["serde"]

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false