[package]
name = "organ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
regex = "1"
rug-fft = "0.1"
gmp-mpfr-sys = "1.3"
flint-sys = "0.4"
futures = "0.3"
rayon = "1.5"
sha2 = "0.10"
elliptic-curve = { version = "0.11.12", features = ["arithmetic"] }
openssl = { version = "0.10", features = ["vendored"] }
num-traits = "0.2"

[dependencies.rug]
version = "1.15"
features = ["serde", "num-traits"]

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false